--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
       document.addEventListener('DOMContentLoaded', function() {
         // see how what the example spreadsheet looks like:
         // https://docs.google.com/spreadsheet/lv?key=0Ao5u1U6KYND7dGN5QngweVJUWE16bTRob0d2a3dCbnc
-        var URL = "0Ao5u1U6KYND7dGN5QngweVJUWE16bTRob0d2a3dCbnc"
+        // mine = https://docs.google.com/spreadsheets/d/1QIdhlnaKgcy3bCXNZvE154wbjfkP0U8XCFQNVZdefIY
+        // old var URL = "0Ao5u1U6KYND7dGN5QngweVJUWE16bTRob0d2a3dCbnc"
+        var URL = "1QIdhlnaKgcy3bCXNZvE154wbjfkP0U8XCFQNVZdefIY"
         Tabletop.init( { key: URL, callback: showInfo, simpleSheet: true } )
       })
 
