--- a/index.html
+++ b/index.html
@@ -38,9 +38,12 @@
         // old: var optionsJSON = ["placename", "photo-url"]
         var optionsJSON = ["School", "City | Country"]
         // an html template for your popup
-        var template = "<ul><li><a href='{{photo-url}}' target='_blank'>"
-                     + "<img src='{{photo-url}}'></a></li>"
-                     + "<li><h4>{{placename}}</h4></li></ul>"
+        // var template = "<ul><li><a href='{{photo-url}}' target='_blank'>"
+        //             + "<img src='{{photo-url}}'></a></li>"
+        //             + "<li><h4>{{placename}}</h4></li></ul>"
+        var template = "<ul><li><a href='{{School}}' target='_blank'>"
+                     + "<img src='{{School}}'></a></li>"
+                    + "<li><h4>{{City | Country}}</h4></li></ul>"
         var geoJSON = Sheetsee.createGeoJSON(data, optionsJSON)
         var map = Sheetsee.loadMap("map")
         // Try different map tiles? examples.map-20v6611k
